feat: 隔离公开、组织内和私人知识图谱